--- a/index.html
+++ b/index.html
@@ -12,21 +12,31 @@
 </head>
 
 <body>
-    <div class="slider-container">
-        <div class="img-container">
-            <img src="https://picsum.photos/id/247/500/300" alt="image">
-            <img src="https://picsum.photos/id/227/500/300" alt="image">
-            <img src="https://picsum.photos/id/217/500/300" alt="image">
-            <img src="https://picsum.photos/id/277/500/300" alt="image">
-
-        </div>
-        <i class="fa fa-angle-double-left 
-        btn prev" aria-hidden="true"></i>
-        <i class="fa fa-angle-double-right 
-        btn next" aria-hidden="true"></i>
+    <div class="nav-bar">
+       <h2>Bogdan</h2>
+        
+            <input type="checkbox" class="input" id="dark-mode">
+            <label for="dark-mode" class="label">
+                <div class="circle"></div>
+            </label>
         
     </div>
+    <div class="container">
+        <div class="slider-container">
+            <div class="img-container">
+                <img src="https://picsum.photos/id/247/500/300" alt="image">
+                <img src="https://picsum.photos/id/227/500/300" alt="image">
+                <img src="https://picsum.photos/id/217/500/300" alt="image">
+                <img src="https://picsum.photos/id/277/500/300" alt="image">
 
+            </div>
+            <i class="fa fa-angle-double-left 
+        btn prev" aria-hidden="true"></i>
+            <i class="fa fa-angle-double-right 
+        btn next" aria-hidden="true"></i>
+
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 
